--- a/lv_template.uvprojx
+++ b/lv_template.uvprojx
@@ -859,7 +859,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>6</Optim>
+            <Optim>0</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -882,7 +882,7 @@
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls>-fdata-sections</MiscControls>
+              <MiscControls>-Omax</MiscControls>
               <Define>__PERF_COUNTER__,LV_USE_GPU_ARM2D=1</Define>
               <Undefine></Undefine>
               <IncludePath>.\platform;.</IncludePath>
